--- a/uebung-flexbox.html
+++ b/uebung-flexbox.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Übung zum Positionieren von Objekten - Teil 3</title>
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="pos.css">
-	</head>
-	<body>
-		<div class="wrapper">
-			<h1>Übung zum Positionieren von Objekten</h1>
-			<p>Arbeiten mit Flexbox</p>
 
-			<!-- Neue Section beginnt hier -->
-			<section>
-				<div class="row">
-					<div class="col trolley-grey">
-						
-					</div>
-					<div class="col sea-green">
-						
-					</div>
-			
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Übung zum Positionieren von Objekten - Teil 3</title>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="pos.css">
+</head>
+
+<body>
+	<div class="wrapper">
+		<h1>Übung zum Positionieren von Objekten</h1>
+		<p>Arbeiten mit Flexbox</p>
+
+		<!-- Neue Section beginnt hier -->
+		<section>
+			<div class="row">
+				<div class="col trolley-grey">
+
 				</div>
-			</section>
+				<div class="col sea-green">
 
-			
-		</div>
-	
-	</body>
+				</div>
+				<div class="col orange">
+
+				</div>
+				<div class="col middle-red">
+
+				</div>
+
+			</div>
+		</section>
+		<section id="flag">
+			<div class="row quer">
+
+				<div class="col col-xl black">
+
+				</div>
+				<div class="col col-xl yellow">
+
+				</div>
+				<div class="col col-xl red">
+
+				</div>
+				<div class="col transparent">
+
+				</div>
+				<img src="einhorn.png" alt="EINHORN" id="einhorn">
+			</div>
+		</section>
+
+	</div>
+
+</body>
+
 </html>
